@@ -4,9 +4,9 @@
  */
 package io.strimzi.kafka.init;
 
+import io.strimzi.operator.common.InvalidConfigurationException;
 import org.junit.jupiter.api.Test;
 
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -16,17 +16,15 @@ import static org.hamcrest.MatcherAssert.assertThat;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 
 public class InitWriterConfigTest {
-
-    private static Map<String, String> envVars = new HashMap<>(3);
-    static {
-        envVars.put(InitWriterConfig.NODE_NAME, "localhost");
-        envVars.put(InitWriterConfig.RACK_TOPOLOGY_KEY, "failure-domain.beta.kubernetes.io/zone");
-        envVars.put(InitWriterConfig.EXTERNAL_ADDRESS, "TRUE");
-    }
+    private static final Map<String, String> ENV_VARS = Map.of(
+        InitWriterConfig.NODE_NAME.key(), "localhost",
+        InitWriterConfig.RACK_TOPOLOGY_KEY.key(), "failure-domain.beta.kubernetes.io/zone",
+        InitWriterConfig.EXTERNAL_ADDRESS.key(), "TRUE"
+    );
 
     @Test
     public void testFromMap() {
-        InitWriterConfig config = InitWriterConfig.fromMap(envVars);
+        InitWriterConfig config = InitWriterConfig.fromMap(ENV_VARS);
 
         assertThat(config.getNodeName(), is("localhost"));
         assertThat(config.getRackTopologyKey(), is("failure-domain.beta.kubernetes.io/zone"));
@@ -36,8 +34,8 @@ public class InitWriterConfigTest {
 
     @Test
     public void testFromMapWithAddressTypeEnvVar() {
-        Map<String, String> envs = new HashMap<>(envVars);
-        envs.put(InitWriterConfig.EXTERNAL_ADDRESS_TYPE, "InternalDNS");
+        Map<String, String> envs = new HashMap<>(ENV_VARS);
+        envs.put(InitWriterConfig.EXTERNAL_ADDRESS_TYPE.key(), "InternalDNS");
 
         InitWriterConfig config = InitWriterConfig.fromMap(envs);
         assertThat(config.getAddressType(), is("InternalDNS"));
@@ -45,14 +43,14 @@ public class InitWriterConfigTest {
 
     @Test
     public void testFromMapEmptyEnvVarsThrows() {
-        assertThrows(IllegalArgumentException.class, () -> InitWriterConfig.fromMap(Collections.emptyMap()));
+        assertThrows(InvalidConfigurationException.class, () -> InitWriterConfig.fromMap(Map.of()));
     }
 
     @Test
     public void testFromMapMissingNodeNameThrows() {
-        Map<String, String> envVars = new HashMap<>(InitWriterConfigTest.envVars);
-        envVars.remove(InitWriterConfig.NODE_NAME);
+        Map<String, String> envVars = new HashMap<>(ENV_VARS);
+        envVars.remove(InitWriterConfig.NODE_NAME.key());
 
-        assertThrows(IllegalArgumentException.class, () -> InitWriterConfig.fromMap(envVars));
+        assertThrows(InvalidConfigurationException.class, () -> InitWriterConfig.fromMap(envVars));
     }
 }
